<resources>
    <string name="app_name">Demo App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="add_friend">Add Friend</string>
    <string name="change_owner">Change Owner</string>
    <string name="muzammil_hussain">Muzammil Hussain</string>
    <string name="save">Save</string>
    <string name="friend_name">Friend Name:</string>
    <string name="enter_friend_name_here">Enter friend name here...</string>
    <string name="friend_age">Friend Age:</string>
    <string name="enter_age_here">Enter age here...</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>